--- a/assets/styles/scss/_components.scss
+++ b/assets/styles/scss/_components.scss
@@ -69,7 +69,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 2rem;
+    gap: 1rem;
   }
 
   input,
@@ -98,9 +98,13 @@
     }
   }
 
+  textarea {
+    height: 150px;
+  }
+
   @media (max-width: 768px) {
     .row {
-      gap: 2rem;
+      gap: 1rem;
     }
   }
 }
@@ -118,6 +122,23 @@
 
   filter: drop-shadow(0px 25px 25px rgba(0, 88, 130, 0.60));
 
+  position: relative;
+
+
+
+  // &::after {
+  //   content: '';
+  //   background-image: url('../../images/circle.svg');
+  //   background-size: cover;
+  //   background-repeat: no-repeat;
+
+  //   position: absolute;
+  //   width: 110%;
+  //   height: 110%;
+
+  //   z-index: -1;
+  // }
+
   .product-card-asset {
     max-width: 252px;
     max-height: 202px;
@@ -129,6 +150,7 @@
     img {
       @extend .responsive-image;
       border-radius: 6px;
+      position: relative;
     }
   }
 
@@ -155,6 +177,49 @@
       font-size: $default;
     }
 
+  }
+
+  .product-card-overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+
+    background-color: rgba(12, 32, 41, 0.7);
+
+    border-radius: $md;
+
+    font-size: $md;
+    font-weight: 700;
+    line-height: 20px;
+    letter-spacing: -0.54px;
+
+    text-align: center;
+    text-transform: uppercase;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    opacity: 0;
+
+    transition: .4s ease;
+
+    a {
+      text-decoration: none;
+      color: $white;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+  }
+
+  &:hover {
+    .product-card-overlay {
+      opacity: 1;
+    }
   }
 
   @media(max-width: 768px) {
@@ -297,7 +362,6 @@
   flex: 1;
 
   .video-lightbox {
-    // background-color: $blue-500;
     background: linear-gradient(rgba(12, 32, 41, 0.7),
         rgba(12, 32, 41, 0.7)), url(../../images/video.webp);
     color: $white;
@@ -313,6 +377,8 @@
     border-top-left-radius: 6px;
     border-top-right-radius: 6px;
 
+    position: relative;
+
     cursor: pointer;
     transition: all ease .2s;
 
@@ -320,6 +386,17 @@
       font-size: $lg;
       font-weight: 700;
       line-height: 35px;
+    }
+
+    a {
+      position: absolute;
+      top: 0;
+      left: 0;
+
+      width: 100%;
+      height: 100%;
+
+      text-decoration: none;
     }
 
 
@@ -410,27 +487,11 @@
   }
 }
 
-// .carousel-cards.slick-initialized {
-//   .icon-card {
-//     width: 85%;
-//     margin: 0 auto;
-
-//   }
-
-//   @media (max-width: 576px) {
-//     .icon-card {
-//       width: 60%;
-//       margin: 0 auto;
-//     }
-//   }
-
-//   @media (min-width: 768px) {
-//     .slick-prev {
-//       left: -40px;
-//     }
-
-//     .slick-next {
-//       right: -40px;
-//     }
-//   }
-// }
+.wpcf7 form .wpcf7-response-output {
+  color: $white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 0;
+}
