--- a/assets/styles/scss/_parts.scss
+++ b/assets/styles/scss/_parts.scss
@@ -229,3 +229,119 @@ header {
 .century-background {
   background-color: $blue-500;
 }
+
+//Footer Century
+.intro-home .itens ul li:before,
+.produtos-destaque ul li:before,
+footer ul.nav-footer li:before,
+.conteudo-categoria ul li:before,
+.conteudo-produto ul li:before,
+.saiba-mais-categoria ul li:before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content: "\f105";
+  color: #f4570d;
+  width: 10px;
+  display: inline-block;
+  margin-right: 5px;
+}
+
+footer {
+  background: #0d4562;
+  font-size: 12px;
+  color: #fff;
+  padding-top: 60px;
+}
+
+footer .col-lg-7 {
+  position: relative;
+}
+
+footer li {
+  list-style: none;
+}
+
+footer a {
+  color: #fff;
+  transition: all 0.1s linear;
+  -webkit-transition: all 0.1s linear;
+  margin-right: 10px;
+  text-decoration: none;
+}
+
+footer a:hover {
+  color: #f4570d;
+  transition: all 0.1s linear;
+  -webkit-transition: all 0.1s linear;
+}
+
+footer h3 {
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+footer h3:after {
+  content: '';
+  width: 60px;
+  height: 2px;
+  background: #f4570d;
+  display: block;
+  margin-top: 10px;
+}
+
+footer .info ul {
+  margin: 30px 0;
+}
+
+footer .info ul li {
+  margin: 15px 0;
+}
+
+footer .info ul li i,
+.contato ul li i {
+  color: #f4570d;
+  margin-right: 10px;
+}
+
+footer .info input {
+  width: 85%;
+  padding: 10px;
+}
+
+footer .info button {
+  width: 15%;
+  padding: 10px 0;
+  background: #f4570d;
+  color: #fff;
+  text-align: center;
+  cursor: pointer;
+}
+
+footer ul.nav-footer {
+  margin-top: 23px;
+}
+
+footer ul.nav-footer li {
+  margin: 15px 0;
+}
+
+footer .selos {
+  position: absolute;
+  right: 15px;
+  bottom: 35px;
+}
+
+footer .selos img {
+  margin-left: 50px;
+}
+
+footer .selos img:first-child {
+  margin-left: 0;
+}
+
+footer .assinatura {
+  border-top: 1px solid #fff;
+  margin-top: 30px;
+  padding: 10px 0;
+}
