--- a/assets/styles/scss/_components.scss
+++ b/assets/styles/scss/_components.scss
@@ -362,8 +362,8 @@
   flex: 1;
 
   .video-lightbox {
-    background: linear-gradient(rgba(12, 32, 41, 0.7),
-        rgba(12, 32, 41, 0.7)), url(../../images/video.webp);
+    // background: linear-gradient(rgba(12, 32, 41, 0.7),
+    //     rgba(12, 32, 41, 0.7)), url(../../images/video.webp);
     color: $white;
 
     display: flex;
@@ -372,7 +372,10 @@
     align-items: center;
     gap: 1rem;
 
-    padding: $size-xxl;
+    padding-top: $size-xxl;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
 
     border-top-left-radius: 6px;
     border-top-right-radius: 6px;
@@ -397,6 +400,16 @@
       height: 100%;
 
       text-decoration: none;
+    }
+
+    iframe,
+    object,
+    embed {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
     }
 
 
